--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=eracertificate
 server.port=8082
+
+# JPA Reposetry Configgretion .............
+spring.datasource.name=sandb2
+spring.datasource.url=jdbc:mysql://localhost:3306/sandb2
+spring.datasource.username=root
+spring.datasource.password=2580
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
